--- a/frontend/css/books.css
+++ b/frontend/css/books.css
@@ -18,7 +18,7 @@ body {
 }
 
 header {
-    position: fixed;
+    position: absolute;
     width: 100%;
     top: 0;
     right: 0;
@@ -155,12 +155,12 @@ section {
     transition: all .42s ease;
 }
 
-header.sticky {
+/* header.sticky {
     background: #fff;
     padding: 20px 10%;
     box-shadow: 0px 0px 10px rgb(0 0 0 / 10%);
 }
-
+ */
 /*TRENDING SECTION*/
 .center-text h2 {
     color: #111;
@@ -1560,12 +1560,14 @@ input[type="radio"] {
     color: #111;
     font-size: 16px;
     margin: 10px 0;
+    font-family: 'cutta-bold', sans-serif;
 }
 
 .product-details p {
     color: #555;
     font-size: 14px;
     margin: 0;
+    font-family: 'cutta-bold', sans-serif;
 }
 
 /* Responsive Design */
