--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -193,7 +193,7 @@ section {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
     /* Adjust minmax for desired item size */
-    gap: 1.5rem;
+    gap: 0.5rem;
     /* Reduce gap between items for compactness */
     justify-items: center;
     /* Center align items within their grid cells */
@@ -1575,12 +1575,14 @@ input[type="radio"] {
     color: #111;
     font-size: 16px;
     margin: 10px 0;
+    font-family: 'cutta-bold', sans-serif;
 }
 
 .product-details p {
     color: #555;
     font-size: 14px;
     margin: 0;
+    font-family: 'cutta-bold', sans-serif;
 }
 
 /* Responsive Design */
