--- a/frontend/css/books.css
+++ b/frontend/css/books.css
@@ -5,7 +5,7 @@
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
-    font-family: "Azeret Mono", monospace;
+    font-family: 'cutta-bold', sans-serif;
     list-style: none;
     text-decoration: none;
 }
@@ -41,11 +41,11 @@ header {
 }
 
 .navmenu a {
-    color: #2c2c2c;
+    color: black;
     font-size: 20px;
     text-transform: capitalize;
     padding: 10px 20px;
-    font-weight: 900;
+    font-weight: bold;
     transition: all .42s ease;
 }
 
